# nexusdb

./: .coderabbit.yaml  .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  ERROR_REPORT.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  sentinel_report.md  test_commands.sql  test_multi_db.sql
.github/workflows/: codeql.yml  rust-clippy.yml
crates/nexus-bench/: Cargo.toml
crates/nexus-bench/benches/: database.rs  sql.rs  storage.rs
crates/nexus-bench/src/: lib.rs  utils.rs
crates/nexus-buffer/: Cargo.toml
crates/nexus-buffer/src/: lib.rs
crates/nexus-cache/: Cargo.toml
crates/nexus-cache/benches/: cache_bench.rs
crates/nexus-cache/src/: arc.rs  bloom.rs  kv_cache.rs  lib.rs  lru.rs  lru_k.rs  plan_cache.rs  prefetch.rs  result_cache.rs  semantic.rs  stats.rs  tiered.rs  w_tinylfu.rs
crates/nexus-cli/: Cargo.toml
crates/nexus-cli/src/: commands.rs  config.rs  formatter.rs  main.rs  repl.rs
crates/nexus-client/: Cargo.toml
crates/nexus-client/src/: error.rs  lib.rs
crates/nexus-client/src/client/: mod.rs
crates/nexus-client/src/pool/: mod.rs
crates/nexus-client/src/query/: mod.rs
crates/nexus-client/src/transaction/: mod.rs
crates/nexus-common/: Cargo.toml
crates/nexus-common/src/: constants.rs  lib.rs
crates/nexus-common/src/config/: database.rs  mod.rs
crates/nexus-common/src/error/: database.rs  mod.rs
crates/nexus-common/src/memory/: aligned.rs  arena.rs  mod.rs  numa.rs  pool.rs  simd.rs
crates/nexus-common/src/types/: ids.rs  keys.rs  mod.rs  timestamps.rs
crates/nexus-hnsw/: Cargo.toml
crates/nexus-hnsw/src/: distance.rs  error.rs  hnsw.rs  lib.rs
crates/nexus-kv/: Cargo.toml
crates/nexus-kv/src/: config.rs  engine.rs  error.rs  lib.rs  wal.rs
crates/nexus-kv/src/cache/: block_cache.rs  mod.rs  table_cache.rs
crates/nexus-kv/src/compaction/: leveled.rs  mod.rs  scheduler.rs
crates/nexus-kv/src/iterator/: mod.rs
crates/nexus-kv/src/manifest/: mod.rs
crates/nexus-kv/src/memtable/: mod.rs  skiplist.rs
crates/nexus-kv/src/sstable/: block.rs  footer.rs  mod.rs  reader.rs  writer.rs
crates/nexus-mvcc/: Cargo.toml
crates/nexus-mvcc/src/: lib.rs
crates/nexus-mvcc/src/gc/: mod.rs
crates/nexus-mvcc/src/hlc/: mod.rs
crates/nexus-mvcc/src/snapshot/: mod.rs
crates/nexus-mvcc/src/version/: mod.rs
crates/nexus-proto/: Cargo.toml  build.rs
crates/nexus-proto/proto/: nexus.proto
crates/nexus-proto/src/: lib.rs
crates/nexus-query/: Cargo.toml
crates/nexus-query/src/: lib.rs
crates/nexus-raft/: Cargo.toml
crates/nexus-raft/src/: lib.rs  log.rs
crates/nexus-raft/src/election/: mod.rs
crates/nexus-raft/src/lease/: mod.rs
crates/nexus-raft/src/membership/: mod.rs
crates/nexus-raft/src/node/: mod.rs
crates/nexus-raft/src/replication/: mod.rs
crates/nexus-raft/src/rpc/: mod.rs
crates/nexus-raft/src/state_machine/: mod.rs
crates/nexus-raft/src/storage/: file.rs  log.rs  mod.rs  state.rs
crates/nexus-raft/src/transport/: memory.rs  mod.rs  tcp.rs
crates/nexus-security/: Cargo.toml
crates/nexus-security/src/: lib.rs
crates/nexus-security/src/audit/: mod.rs
crates/nexus-security/src/auth/: mod.rs
crates/nexus-security/src/authn/: mod.rs
crates/nexus-security/src/authz/: mod.rs
crates/nexus-security/src/crypto/: mod.rs
crates/nexus-security/src/tls/: mod.rs
crates/nexus-server/: Cargo.toml
crates/nexus-server/src/: lib.rs  mysql_handler.rs  pgwire_handler.rs
crates/nexus-server/src/config/: mod.rs
crates/nexus-server/src/database/: engine.rs  error.rs  mod.rs  raft_sm.rs  result.rs  session.rs  vector_index.rs
crates/nexus-server/src/grpc/: mod.rs
crates/nexus-sql/: Cargo.toml
crates/nexus-sql/src/: lib.rs
crates/nexus-sql/src/executor/: batch.rs  engine.rs  evaluator.rs  mod.rs  operators.rs  row.rs  value.rs
crates/nexus-sql/src/logical/: builder.rs  expr.rs  mod.rs  operator.rs  plan.rs  schema.rs
crates/nexus-sql/src/optimizer/: cost.rs  mod.rs  rules.rs
crates/nexus-sql/src/parser/: expr.rs  mod.rs  statement.rs  types.rs
crates/nexus-sql/src/physical/: context.rs  expr.rs  mod.rs  operator.rs  plan.rs  planner.rs
crates/nexus-sql/src/storage/: catalog.rs  encoder.rs  engine.rs  error.rs  hybrid.rs  mod.rs  table.rs
crates/nexus-storage/: Cargo.toml
crates/nexus-storage/src/: lib.rs
crates/nexus-storage/src/buffer/: config.rs  error.rs  eviction.rs  frame.rs  latch.rs  mod.rs  pool.rs
crates/nexus-storage/src/file/: error.rs  handle.rs  mod.rs  options.rs  std_io.rs  uring.rs
crates/nexus-storage/src/page/: checksum.rs  header.rs  mod.rs  slotted.rs  types.rs
crates/nexus-storage/src/sagetree/: config.rs  cursor.rs  delta.rs  error.rs  mod.rs  node.rs  pager.rs  tree.rs
crates/nexus-test/: Cargo.toml
crates/nexus-test/src/: lib.rs
crates/nexus-test/tests/: e2e_integration.rs  grpc_integration.rs
crates/nexus-txn/: Cargo.toml
crates/nexus-txn/src/: lib.rs
crates/nexus-txn/src/deadlock/: mod.rs
crates/nexus-txn/src/lock/: mod.rs
crates/nexus-txn/src/manager/: mod.rs
crates/nexus-wal/: Cargo.toml
crates/nexus-wal/src/: config.rs  error.rs  lib.rs  reader.rs  segment.rs  wal.rs  writer.rs
crates/nexus-wal/src/checkpoint/: mod.rs
crates/nexus-wal/src/group_commit/: mod.rs
crates/nexus-wal/src/record/: header.rs  mod.rs  payload.rs  types.rs
docs/: SAGETREE.md
