[workspace]
resolver = "2"
members = [
    "crates/nexus-common",
    "crates/nexus-storage",
    "crates/nexus-buffer",
    "crates/nexus-wal",
    "crates/nexus-txn",
    "crates/nexus-mvcc",
    "crates/nexus-raft",
    "crates/nexus-query",
    "crates/nexus-sql",
    "crates/nexus-proto",
    "crates/nexus-server",
    "crates/nexus-client",
    "crates/nexus-cli",
    "crates/nexus-test",
    "crates/nexus-bench",
    "crates/nexus-cache",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NexusDB Team <saikiranreddy2710@github.com>"]
license = "Apache-2.0"
repository = "https://github.com/saikiranreddy2710/nexusdb"
keywords = ["database", "newsql", "distributed", "storage-engine"]
categories = ["database", "data-structures"]

[workspace.dependencies]
# Internal crates
nexus-common = { path = "crates/nexus-common" }
nexus-storage = { path = "crates/nexus-storage" }
nexus-buffer = { path = "crates/nexus-buffer" }
nexus-wal = { path = "crates/nexus-wal" }
nexus-txn = { path = "crates/nexus-txn" }
nexus-mvcc = { path = "crates/nexus-mvcc" }
nexus-raft = { path = "crates/nexus-raft" }
nexus-query = { path = "crates/nexus-query" }
nexus-sql = { path = "crates/nexus-sql" }
nexus-server = { path = "crates/nexus-server" }
nexus-client = { path = "crates/nexus-client" }
nexus-proto = { path = "crates/nexus-proto" }
nexus-cache = { path = "crates/nexus-cache" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Bytes and memory
bytes = { version = "1.5", features = ["serde"] }
memmap2 = "0.9"

# Concurrency
parking_lot = "0.12"
dashmap = "5.5"
crossbeam = "0.8"
crossbeam-epoch = "0.9"
crossbeam-utils = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Random and time
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"

# Networking (for later phases)
tonic = "0.10"
tonic-build = "0.10"
prost = "0.12"
futures-core = "0.3"
futures-util = "0.3"

# Testing
criterion = "0.5"
tempfile = "3.10"
proptest = "1.4"

# CRC for checksums
crc32fast = "1.3"

# Bitflags
bitflags = "2.4"

# SQL parsing
sqlparser = "0.43"

# Apache Arrow for vectorized execution
arrow = { version = "50.0", features = ["prettyprint"] }

# io_uring for Linux
io-uring = "0.6"

# libc for low-level system calls
libc = "0.2"

# Metrics
metrics = "0.22"

# CLI tools
clap = { version = "4.4", features = ["derive", "env"] }
rustyline = "13.0"
comfy-table = "7.1"
dirs = "5.0"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = false
lto = "thin"
