[package]
name = "nexus-buffer"
description = "Buffer pool manager for NexusDB"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nexus-common = { workspace = true }
nexus-storage = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
crossbeam = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

# Benchmarks will be added in Phase 1
# [[bench]]
# name = "buffer_pool"
# harness = false
