[package]
name = "nexus-common"
description = "Common types, errors, and utilities for NexusDB"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytes = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
crc32fast = { workspace = true }
chrono = { workspace = true }
humantime = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
