[package]
name = "nexus-server"
description = "Network server for NexusDB"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nexus-common = { workspace = true }
nexus-storage = { workspace = true }
nexus-buffer = { workspace = true }
nexus-wal = { workspace = true }
nexus-txn = { workspace = true }
nexus-mvcc = { workspace = true }
nexus-raft = { workspace = true }
nexus-query = { workspace = true }
nexus-sql = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
