[package]
name = "nexus-server"
description = "Network server for NexusDB"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "nexusd"
path = "src/bin/nexusd.rs"

[dependencies]
nexus-common = { workspace = true }
nexus-storage = { workspace = true }
nexus-buffer = { workspace = true }
nexus-wal = { workspace = true }
nexus-txn = { workspace = true }
nexus-mvcc = { workspace = true }
nexus-raft = { workspace = true }
nexus-query = { workspace = true }
nexus-sql = { workspace = true }
nexus-proto = { workspace = true }
nexus-cache = { path = "../nexus-cache" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
