[package]
name = "nexus-sql"
description = "SQL parser and planner for NexusDB"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nexus-common = { workspace = true }
nexus-query = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
